<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/nav_reading"
        android:icon="@drawable/ic_reading"
        android:title="@string/nav_reading" />
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_stroll"
        android:icon="@drawable/ic_stroll"
        android:title="@string/nav_stroll" />
    <item
        android:id="@+id/nav_reminder"
        android:icon="@drawable/ic_reminder"
        android:title="@string/nav_reminder" />
    <item
        android:id="@+id/nav_phone"
        android:icon="@drawable/ic_phone_control"
        android:title="@string/nav_phone" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
